--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,4 +17,6 @@
     <dimen name="track_name_margin">8dp</dimen>
     <dimen name="player_small_button">51dp</dimen>
     <dimen name="player_big_button">100dp</dimen>
+    <dimen name="progress_bar_size">44dp</dimen>
+    <dimen name="progress_bar_margin">140dp</dimen>
 </resources>
