--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -122,7 +122,7 @@
     app:layout_constraintTop_toBottomOf="@id/play_button"
     app:layout_constraintStart_toStartOf="@id/start_guide"
     app:layout_constraintEnd_toEndOf="@id/end_guide"
-    android:text="0:30"
+    android:text="@string/default_preview_time"
     android:layout_marginTop="4dp"
     android:textColor="?attr/colorOnSecondary"
     />
