--- a/app/src/main/res/layout/activity_library.xml
+++ b/app/src/main/res/layout/activity_library.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/SecondaryLayout"
-    tools:context=".LibraryActivity">
+    tools:context=".ui.library.LibraryActivity">
         <LinearLayout
             style="@style/SecondaryLayoutTitle"
             android:layout_width="match_parent"
